Bug 234032 - problem applying a CSV import model
Summary: problem applying a CSV import model
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-11 12:05 UTC by p92
Modified: 2010-04-11 15:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description p92 2010-04-11 12:05:16 UTC
Version:           4.4.2 (using 4.4.2 (KDE 4.4.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.31-20-generic

- Launch Kontact and go to KAB
1- Go to File menu/Import/Import CSV file...
2- select a .csv file to import 
- replace the 'Undefined' heading by proper ones from the list of headings.
- **** save the MODEL before importing
- click on 'Ok'
- select the address book you wish the contact(s) to be.

now redo another import steps 1 and 2
then click on USE MODEL,
choose your saved model
as soon as you click OK to use that model  all data from imported file disappear from the import window

so it is currently impossible to reuse an import model.
Comment 1 Tobias Koenig 2010-04-11 15:28:41 UTC
SVN commit 1113676 by tokoe:

Do not emit the 'Skip first row' signal twice, that will
confuse the update mechanism and we end up with an empty model.

BUG: 234032


 M  +5 -0      csvimportdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1113676