Do not emit the 'Skip first row' signal twice, that will confuse the update mechanism and we end up with an empty model.

BUG: 234032

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1113676